fix: QEditor toolbar btns + fix scroll on iOS; Button sizes, padding, dense, btn groups and dropdown alignment

--- a/src/components/btn/btn-default.ios.styl
+++ b/src/components/btn/btn-default.ios.styl
@@ -5,7 +5,6 @@
   outline 0
   border 0
   vertical-align middle
-  vertical-align -webkit-baseline-middle
   cursor pointer
   -webkit-appearance button
   padding $button-padding
@@ -58,8 +57,8 @@
   width 3em
 
 .q-btn-dense
-  padding $button-dense-padding
-  min-height 0
+  padding .285em
+  min-height 2em
   &.q-btn-round
     padding 0
     height 2.4em
