--- a/src/components/btn/btn-group.mat.styl
+++ b/src/components/btn/btn-group.mat.styl
@@ -1,7 +1,7 @@
 .q-btn-group
   border-radius $button-border-radius
   box-shadow $button-shadow
-  vertical-align text-bottom
+  vertical-align middle
   > .q-btn-group
     box-shadow none
   .q-btn
